[package]
name = "spring83"
version = "0.0.1"
edition = "2021"

authors = ["Robert DiMartino <robert@dimartino.dev>"]
description = "Rust implementation of the Spring '83 draft protocol"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rdimartino/spring83"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
ed25519-dalek = "1.0"
lazy_static = "1.4"
rand = "0.7"
hex = "0.4"
